Add proper dep installation

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "confused-Techie",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "tree-sitter-suricata-rules": "^1.0.0"
+  }
 }
